--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ button {
 }
 
 /* footer */
-footer {
+.footer {
 	font-weight: 600;
 	color: rgb(255, 255, 255);
 	text-align: center;
@@ -77,5 +77,14 @@ footer {
 }
 
 .footer a {
+	color: rgb(255, 255, 255);
+}
+
+footer {
+	margin-top: 100px;
+	text-align: center;
+}
+
+footer a {
 	color: rgb(255, 255, 255);
 }
